# search-query-parser

./: Cargo.toml  README.md  fmt_check_test.sh  rustfmt.toml
.github/workflows/: build_and_test.yml
src/: condition.rs  layered_queries.rs  layered_query.rs  lib.rs  main.rs  query.rs
src/regex_approach/: condition.rs  layered_query.rs  mod.rs  query.rs
