[package]
name = "search-query-parser"
version = "0.1.0"
edition = "2021"
authors = ["dimmy82 <chengdimmy82@yahoo.co.jp>"]
description = "parse complex search query to layered search conditions"
homepage = "https://github.com/dimmy82/rust-concurrency-request"
repository = "https://github.com/dimmy82/rust-concurrency-request"
documentation = "https://docs.rs/rust-concurrency-request"
readme = "README.md"
license = "MIT"

[lib]
name = "search_query_parser"
path = "src/lib.rs"
test = true
doctest = false
edition = "2021"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
eyre = "0.6.8"