[package]
name = "search-query-parser"
version = "0.1.2"
edition = "2021"
authors = ["dimmy82 <chengdimmy82@yahoo.co.jp>"]
description = "parse complex search query into layered search conditions, so it will be easy to construct Elasticsearch query DSL or something else."
homepage = "https://github.com/dimmy82/search-query-parser"
repository = "https://github.com/dimmy82/search-query-parser"
documentation = "https://docs.rs/search-query-parser"
readme = "README.md"
license = "MIT"

[lib]
name = "search_query_parser"
path = "src/lib.rs"
test = true
doctest = false
edition = "2021"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
eyre = "0.6.8"
serde = { version = "1.0", features = ["derive"] }